...
  }

  Widget _buildTitleSection() {
    return const Column(
      children: [
        Text(
          'Booking Berhasil!',
          style: TextStyle(fontSize: 22, fontWeight: FontWeight.bold),
        ),
        SizedBox(height: 10),
        Text(
          'Unit BeAT kamu sedang disiapkan.\nTim kami akan segera menghubungi\nuntuk proses selanjutnya.',
          textAlign: TextAlign.center,
...
          side: BorderSide(color: Colors.grey.shade300),
          shape: RoundedRectangleBorder(
            borderRadius: BorderRadius.circular(30),
          ),
        ),
        child: const Text(
          'Kembali ke Beranda',
          style: TextStyle(
            fontSize: 15,
            fontWeight: FontWeight.w500,
            color: Colors.black87,
          ),
        ),
...
